lang/csharp/src/antlr/STEPParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/ikeough/Documents/IFC-gen/schemas/STEP.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace STEP {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class STEPParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, IntegerLiteral=9, 
		Letter=10, CapitalLetter=11, DateTime=12, PlusMinus=13, Derived=14, BoolLogical=15, 
		Enum=16, RealLiteral=17, DATA=18, ENDSEC=19, FILE_DESCRIPTION=20, FILE_NAME=21, 
		FILE_SCHEMA=22, HEADER=23, Id=24, ISO=25, ISO_END=26, StringLiteral=27, 
		TypeRef=28, Undefined=29, DoubleQuote=30, AnyString=31, NewlineChar=32, 
		WS=33, Comments=34;
	public const int
		RULE_author = 0, RULE_authorisation = 1, RULE_collection = 2, RULE_collectionValue = 3, 
		RULE_constructor = 4, RULE_data = 5, RULE_description = 6, RULE_file = 7, 
		RULE_fileDescription = 8, RULE_fileName = 9, RULE_filePath = 10, RULE_fileSchema = 11, 
		RULE_header = 12, RULE_implementation = 13, RULE_instance = 14, RULE_name = 15, 
		RULE_originating_system = 16, RULE_organization = 17, RULE_parameter = 18, 
		RULE_preprocessor_version = 19, RULE_timeStamp = 20;
	public static readonly string[] ruleNames = {
		"author", "authorisation", "collection", "collectionValue", "constructor", 
		"data", "description", "file", "fileDescription", "fileName", "filePath", 
		"fileSchema", "header", "implementation", "instance", "name", "originating_system", 
		"organization", "parameter", "preprocessor_version", "timeStamp"
	};

	private static readonly string[] _LiteralNames = {
		null, "'('", "','", "')'", "'()'", "';'", "'''", "'.'", "'='", null, null, 
		null, null, null, "'*'", null, null, null, "'DATA'", "'ENDSEC'", "'FILE_DESCRIPTION'", 
		"'FILE_NAME'", "'FILE_SCHEMA'", "'HEADER'", null, null, null, null, null, 
		"'$'", "''''"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "IntegerLiteral", 
		"Letter", "CapitalLetter", "DateTime", "PlusMinus", "Derived", "BoolLogical", 
		"Enum", "RealLiteral", "DATA", "ENDSEC", "FILE_DESCRIPTION", "FILE_NAME", 
		"FILE_SCHEMA", "HEADER", "Id", "ISO", "ISO_END", "StringLiteral", "TypeRef", 
		"Undefined", "DoubleQuote", "AnyString", "NewlineChar", "WS", "Comments"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "STEP.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static STEPParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public STEPParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public STEPParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class AuthorContext : ParserRuleContext {
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public AuthorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_author; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterAuthor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitAuthor(this);
		}
	}

	[RuleVersion(0)]
	public AuthorContext author() {
		AuthorContext _localctx = new AuthorContext(Context, State);
		EnterRule(_localctx, 0, RULE_author);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 42; Match(AnyString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AuthorisationContext : ParserRuleContext {
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public AuthorisationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_authorisation; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterAuthorisation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitAuthorisation(this);
		}
	}

	[RuleVersion(0)]
	public AuthorisationContext authorisation() {
		AuthorisationContext _localctx = new AuthorisationContext(Context, State);
		EnterRule(_localctx, 2, RULE_authorisation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44; Match(AnyString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CollectionContext : ParserRuleContext {
		public CollectionValueContext[] collectionValue() {
			return GetRuleContexts<CollectionValueContext>();
		}
		public CollectionValueContext collectionValue(int i) {
			return GetRuleContext<CollectionValueContext>(i);
		}
		public CollectionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_collection; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterCollection(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitCollection(this);
		}
	}

	[RuleVersion(0)]
	public CollectionContext collection() {
		CollectionContext _localctx = new CollectionContext(Context, State);
		EnterRule(_localctx, 4, RULE_collection);
		int _la;
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46; Match(T__0);
				State = 47; collectionValue();
				State = 52;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==T__1) {
					{
					{
					State = 48; Match(T__1);
					State = 49; collectionValue();
					}
					}
					State = 54;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 55; Match(T__2);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; Match(T__3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CollectionValueContext : ParserRuleContext {
		public ITerminalNode RealLiteral() { return GetToken(STEPParser.RealLiteral, 0); }
		public ITerminalNode IntegerLiteral() { return GetToken(STEPParser.IntegerLiteral, 0); }
		public ITerminalNode StringLiteral() { return GetToken(STEPParser.StringLiteral, 0); }
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public ITerminalNode Id() { return GetToken(STEPParser.Id, 0); }
		public ConstructorContext constructor() {
			return GetRuleContext<ConstructorContext>(0);
		}
		public ITerminalNode Undefined() { return GetToken(STEPParser.Undefined, 0); }
		public CollectionValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_collectionValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterCollectionValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitCollectionValue(this);
		}
	}

	[RuleVersion(0)]
	public CollectionValueContext collectionValue() {
		CollectionValueContext _localctx = new CollectionValueContext(Context, State);
		EnterRule(_localctx, 6, RULE_collectionValue);
		try {
			State = 67;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case RealLiteral:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; Match(RealLiteral);
				}
				break;
			case IntegerLiteral:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; Match(IntegerLiteral);
				}
				break;
			case StringLiteral:
				EnterOuterAlt(_localctx, 3);
				{
				State = 62; Match(StringLiteral);
				}
				break;
			case AnyString:
				EnterOuterAlt(_localctx, 4);
				{
				State = 63; Match(AnyString);
				}
				break;
			case Id:
				EnterOuterAlt(_localctx, 5);
				{
				State = 64; Match(Id);
				}
				break;
			case TypeRef:
				EnterOuterAlt(_localctx, 6);
				{
				State = 65; constructor();
				}
				break;
			case Undefined:
				EnterOuterAlt(_localctx, 7);
				{
				State = 66; Match(Undefined);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConstructorContext : ParserRuleContext {
		public ITerminalNode TypeRef() { return GetToken(STEPParser.TypeRef, 0); }
		public ParameterContext[] parameter() {
			return GetRuleContexts<ParameterContext>();
		}
		public ParameterContext parameter(int i) {
			return GetRuleContext<ParameterContext>(i);
		}
		public ConstructorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_constructor; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterConstructor(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitConstructor(this);
		}
	}

	[RuleVersion(0)]
	public ConstructorContext constructor() {
		ConstructorContext _localctx = new ConstructorContext(Context, State);
		EnterRule(_localctx, 8, RULE_constructor);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 69; Match(TypeRef);
			State = 70; Match(T__0);
			State = 72;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__3) | (1L << IntegerLiteral) | (1L << Derived) | (1L << BoolLogical) | (1L << Enum) | (1L << RealLiteral) | (1L << Id) | (1L << StringLiteral) | (1L << TypeRef) | (1L << Undefined) | (1L << AnyString))) != 0)) {
				{
				State = 71; parameter();
				}
			}

			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__1) {
				{
				{
				State = 74; Match(T__1);
				State = 75; parameter();
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 81; Match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DataContext : ParserRuleContext {
		public ITerminalNode DATA() { return GetToken(STEPParser.DATA, 0); }
		public ITerminalNode ENDSEC() { return GetToken(STEPParser.ENDSEC, 0); }
		public InstanceContext[] instance() {
			return GetRuleContexts<InstanceContext>();
		}
		public InstanceContext instance(int i) {
			return GetRuleContext<InstanceContext>(i);
		}
		public DataContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_data; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterData(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitData(this);
		}
	}

	[RuleVersion(0)]
	public DataContext data() {
		DataContext _localctx = new DataContext(Context, State);
		EnterRule(_localctx, 10, RULE_data);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(DATA);
			State = 84; Match(T__4);
			State = 88;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Id) {
				{
				{
				State = 85; instance();
				}
				}
				State = 90;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 91; Match(ENDSEC);
			State = 92; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DescriptionContext : ParserRuleContext {
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public CollectionContext collection() {
			return GetRuleContext<CollectionContext>(0);
		}
		public DescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_description; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterDescription(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitDescription(this);
		}
	}

	[RuleVersion(0)]
	public DescriptionContext description() {
		DescriptionContext _localctx = new DescriptionContext(Context, State);
		EnterRule(_localctx, 12, RULE_description);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case AnyString:
				EnterOuterAlt(_localctx, 1);
				{
				State = 94; Match(AnyString);
				}
				break;
			case T__0:
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 95; collection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileContext : ParserRuleContext {
		public ITerminalNode ISO() { return GetToken(STEPParser.ISO, 0); }
		public HeaderContext header() {
			return GetRuleContext<HeaderContext>(0);
		}
		public DataContext data() {
			return GetRuleContext<DataContext>(0);
		}
		public ITerminalNode ISO_END() { return GetToken(STEPParser.ISO_END, 0); }
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 14, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 98; Match(ISO);
			State = 99; header();
			State = 100; data();
			State = 101; Match(ISO_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileDescriptionContext : ParserRuleContext {
		public ITerminalNode FILE_DESCRIPTION() { return GetToken(STEPParser.FILE_DESCRIPTION, 0); }
		public DescriptionContext description() {
			return GetRuleContext<DescriptionContext>(0);
		}
		public ImplementationContext implementation() {
			return GetRuleContext<ImplementationContext>(0);
		}
		public FileDescriptionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileDescription; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterFileDescription(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitFileDescription(this);
		}
	}

	[RuleVersion(0)]
	public FileDescriptionContext fileDescription() {
		FileDescriptionContext _localctx = new FileDescriptionContext(Context, State);
		EnterRule(_localctx, 16, RULE_fileDescription);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 103; Match(FILE_DESCRIPTION);
			State = 104; Match(T__0);
			State = 105; description();
			State = 106; Match(T__1);
			State = 107; implementation();
			State = 108; Match(T__2);
			State = 109; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileNameContext : ParserRuleContext {
		public ITerminalNode FILE_NAME() { return GetToken(STEPParser.FILE_NAME, 0); }
		public NameContext name() {
			return GetRuleContext<NameContext>(0);
		}
		public TimeStampContext timeStamp() {
			return GetRuleContext<TimeStampContext>(0);
		}
		public Preprocessor_versionContext preprocessor_version() {
			return GetRuleContext<Preprocessor_versionContext>(0);
		}
		public Originating_systemContext originating_system() {
			return GetRuleContext<Originating_systemContext>(0);
		}
		public AuthorisationContext authorisation() {
			return GetRuleContext<AuthorisationContext>(0);
		}
		public AuthorContext author() {
			return GetRuleContext<AuthorContext>(0);
		}
		public CollectionContext[] collection() {
			return GetRuleContexts<CollectionContext>();
		}
		public CollectionContext collection(int i) {
			return GetRuleContext<CollectionContext>(i);
		}
		public OrganizationContext organization() {
			return GetRuleContext<OrganizationContext>(0);
		}
		public FileNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileName; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterFileName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitFileName(this);
		}
	}

	[RuleVersion(0)]
	public FileNameContext fileName() {
		FileNameContext _localctx = new FileNameContext(Context, State);
		EnterRule(_localctx, 18, RULE_fileName);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111; Match(FILE_NAME);
			State = 112; Match(T__0);
			State = 113; name();
			State = 114; Match(T__1);
			State = 115; timeStamp();
			State = 116; Match(T__1);
			State = 119;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case AnyString:
				{
				State = 117; author();
				}
				break;
			case T__0:
			case T__3:
				{
				State = 118; collection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 121; Match(T__1);
			State = 124;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case AnyString:
				{
				State = 122; organization();
				}
				break;
			case T__0:
			case T__3:
				{
				State = 123; collection();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 126; Match(T__1);
			State = 127; preprocessor_version();
			State = 128; Match(T__1);
			State = 129; originating_system();
			State = 130; Match(T__1);
			State = 131; authorisation();
			State = 132; Match(T__2);
			State = 133; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FilePathContext : ParserRuleContext {
		public ITerminalNode[] Letter() { return GetTokens(STEPParser.Letter); }
		public ITerminalNode Letter(int i) {
			return GetToken(STEPParser.Letter, i);
		}
		public FilePathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_filePath; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterFilePath(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitFilePath(this);
		}
	}

	[RuleVersion(0)]
	public FilePathContext filePath() {
		FilePathContext _localctx = new FilePathContext(Context, State);
		EnterRule(_localctx, 20, RULE_filePath);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 135; Match(T__5);
			State = 139;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Letter) {
				{
				{
				State = 136; Match(Letter);
				}
				}
				State = 141;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 142; Match(T__6);
			State = 146;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==Letter) {
				{
				{
				State = 143; Match(Letter);
				}
				}
				State = 148;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 149; Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FileSchemaContext : ParserRuleContext {
		public ITerminalNode FILE_SCHEMA() { return GetToken(STEPParser.FILE_SCHEMA, 0); }
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public FileSchemaContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fileSchema; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterFileSchema(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitFileSchema(this);
		}
	}

	[RuleVersion(0)]
	public FileSchemaContext fileSchema() {
		FileSchemaContext _localctx = new FileSchemaContext(Context, State);
		EnterRule(_localctx, 22, RULE_fileSchema);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 151; Match(FILE_SCHEMA);
			State = 152; Match(T__0);
			State = 153; Match(T__0);
			State = 154; Match(AnyString);
			State = 155; Match(T__2);
			State = 156; Match(T__2);
			State = 157; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class HeaderContext : ParserRuleContext {
		public ITerminalNode HEADER() { return GetToken(STEPParser.HEADER, 0); }
		public FileDescriptionContext fileDescription() {
			return GetRuleContext<FileDescriptionContext>(0);
		}
		public FileNameContext fileName() {
			return GetRuleContext<FileNameContext>(0);
		}
		public FileSchemaContext fileSchema() {
			return GetRuleContext<FileSchemaContext>(0);
		}
		public ITerminalNode ENDSEC() { return GetToken(STEPParser.ENDSEC, 0); }
		public HeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_header; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterHeader(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitHeader(this);
		}
	}

	[RuleVersion(0)]
	public HeaderContext header() {
		HeaderContext _localctx = new HeaderContext(Context, State);
		EnterRule(_localctx, 24, RULE_header);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 159; Match(HEADER);
			State = 160; Match(T__4);
			State = 161; fileDescription();
			State = 162; fileName();
			State = 163; fileSchema();
			State = 164; Match(ENDSEC);
			State = 165; Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImplementationContext : ParserRuleContext {
		public ITerminalNode AnyString() { return GetToken(STEPParser.AnyString, 0); }
		public ImplementationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_implementation; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterImplementation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitImplementation(this);
		}
	}

	[RuleVersion(0)]
	public ImplementationContext implementation() {
		ImplementationContext _localctx = new ImplementationContext(Context, State);
		EnterRule(_localctx, 26, RULE_implementation);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 167; Match(AnyString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InstanceContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(STEPParser.Id, 0); }
		public ConstructorContext constructor() {
			return GetRuleContext<ConstructorContext>(0);
		}
		public InstanceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_instance; } }
		public override void EnterRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.EnterInstance(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ISTEPListener typedListener = listener as ISTEPListener;
			if (typedListener != null) typedListener.ExitInstance(this);
		}
	}
